# AtomTrapLab_auto

./: .gitignore  D0048rb87 peak 7292011 scan 4.txt  GUI.py  Jan11_21_A0035New_Laser_2_160802.txt  Jan11_21_A0036New_Laser_2_160802.txt  Jan11_21_A0037New_Laser_2_160802.txt  LICENSE.md  Laser_controller_functions.py  MOT.py  QC_lab_auto_gui.py  QC_lab_auto_gui.ui  README.md  Testing_jupyter_notebook.ipynb  Tuning.xlsx  Untitled.ipynb  cursors_function.py  daq.py  detect_peaks.py  heatmaps_function.py  main.py  main_bottleneck.py  main_functions.py  matlab_analysis.m  mod.py  peak_detection.ipynb  peak_detection.py  pyproject.toml  ramp.csv  rampTest_with_adjustable_time.ino  satabs_cursors.py  testScan.txt  testScan_Test32_comb.txt  test_heatmaps_function.py  test_peak_detection.py
.ipynb_checkpoints/: Testing_jupyter_notebook-checkpoint.ipynb
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
Scans/: D0002test_scan.txt  D0045rb87 peak 7292011 scan 1.txt  D0046rb87 peak 7292011 scan 2.txt  D0047rb87 peak 7292011 scan 2.txt  Test32.txt  testScan2.txt
ramp_monitor/: ramp_monitor.ino
src/: daq.py  daq_util.py
