[tool.poetry]
name = "atomtraplab"
version = "0.1.0"
description = "This repository contains resources and source code for Dr. Katharina Gillen's cold atom trapping laboratory."
authors = ["Jonathan Fuzaro Alencar <jfuzaroa@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pyserial = "^3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
